@@ -2126,6 +2126,17 @@
       </component>
     </version>
   </module>
+  <module name="webeyes">
+    <version release="gnome-2.4">
+      <component name="webeyes" dir="webeyes" group="extras">
+	<podir dir="po"/>
+	<potname name="webeyes.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="yelp">
     <version release="gnome-2.2">
       <component name="yelp" dir="yelp" group="desktop">
