@@ -1,3 +1,7 @@
+2003-09-15  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added webeyes.
+
 2003-09-13  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: gedit has been branched.
